[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/player.png" type="Texture" id=1]
[ext_resource path="res://player/PlayerRotate.gd" type="Script" id=2]
[ext_resource path="res://player/Player.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0

[sub_resource type="Animation" id=2]
resource_name = "jump"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteParent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 0.6 ), Vector2( 0.6, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteParent/SpriteOffset:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 16 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "land"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteParent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 0.6 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteParent/SpriteOffset:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 16 ), Vector2( 0, 0 ) ]
}

[node name="PlayerRotate" type="Node2D"]
script = ExtResource( 3 )

[node name="SpriteParent" type="Node2D" parent="."]

[node name="SpriteOffset" type="Node2D" parent="SpriteParent"]

[node name="Sprite" type="Sprite" parent="SpriteParent/SpriteOffset"]
texture = ExtResource( 1 )

[node name="PlayerRotate" type="RigidBody2D" parent="."]
contacts_reported = 3
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerRotate"]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="PlayerRotate"]
rect = Rect2( -60, -60, 120, 120 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/jump = SubResource( 2 )
anims/land = SubResource( 3 )
